@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+09-Jul-2003
+~~~~~~~~~~~
+Added count of directory contents to info window (Stephen Watson).
+
 04-Jul-2003
 ~~~~~~~~~~~
 Updated italian translation in AppInfo.xml and src/po/it.po (Yuri Bongiorno)
